test/neg/poly2.smt2_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants


; Distinct Constants


; Uninterpreted Functions
(declare-fun offset (@a0 Int Int @a0) @a1)


; Qualifiers


; Well-formedness constraints


; Horn constraints
(constraint (forall ((x (BitVec Size32))(v1 (BitVec Size32))) (=> (and (= VV (apply (apply (apply (apply offset 0) 0) 0) 0)) (= v1 x)) (not (= v1 x)))))
